Fixed collapse button not working on bulk get word.

--- a/ui/src/components/WSResults/WSResultsStyle.css
+++ b/ui/src/components/WSResults/WSResultsStyle.css
@@ -131,7 +131,7 @@
 }
 
 .word-scrapper-results-table-collapse-btn-icon-active {
-  transform: rotate(0deg);
+  transform: rotate(0deg) !important;
 }
 
 @keyframes compInitAnim {
